--- a/views/loggedUserProfile.ejs
+++ b/views/loggedUserProfile.ejs
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico" />
+    <link rel="stylesheet" href="/frontend/global.css" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>
         <%= username %>
     </title>
@@ -82,47 +88,39 @@
         <div class="username">
             <%= username %>
         </div>
-        <div class="bio"></div>
-        <div class="email">Email: </div>
-        <button class="add-friend-button" onclick="addFriend()">Add Friend</button>
-        <h2>Friends List:</h2>
-        <div class="friends-list">
-
+        <div class="bio">
+            <%= username %> is a programmer and a BCA student, interested in coding and exploring the latest tech.
         </div>
+        <div class="email">Email: <%= username %>@example.com</div>
+        <button class="add-friend-button">Edit Profile</button>
+        <h2>Friends List:</h2>
+        <div></div>
     </div>
+    <button class="add-friend-button" onclick="logout()">logout</button>
 </body>
+
 <script>
-    function addFriend() {
-        // To retrieve the username
-        const userId = localStorage.getItem("username");
-        console.log(userId)
-
-        const friendId = "<%= username %>"
-        const data = {
-            userId: userId,
-            friendId: friendId,
-        };
-
-        fetch("/addFriend", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json",
-            },
-            body: JSON.stringify(data),
+    function logout() {
+        fetch('/logout', {
+            method: 'POST',
+            credentials: 'same-origin'
         })
-            .then((response) => response.json())
-            .then((data) => {
-                console.log(data);
-                if (data.status === "success") {
-                    alert("Friend added successfully!");
+            .then(response => {
+
+                if (response.ok) {
+                    window.location.href = "/";
                 } else {
-                    alert("Failed to add friend: " + data.message);
+                    alert(data.message);
                 }
             })
-            .catch((error) => {
-                console.error("Error adding friend:", error);
-                alert("An error occurred while adding friend. Please try again later.");
+            .catch(error => {
+                console.error(error);
+                alert("An error occurred while trying to log in");
             });
-    }</script>
+    }
+
+
+
+</script>
 
 </html>
